gateway edited to include new APIs, new API .properties files added

--- a/gateway.properties
+++ b/gateway.properties
@@ -12,3 +12,15 @@ zuul.routes.discovery.path=/discovery/**
 zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
 zuul.routes.discovery.url=http://localhost:8082
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
+
+zuul.routes.user-creation-api.path=/user-creation-api/**
+zuul.routes.user-creation-api.sensitive-headers=Set-Cookie,Authorization
+hystrix.command.user-creation-api.execution.isolation.thread.timeoutInMilliseconds=600000
+
+zuul.routes.cv-trainee-service.path=/cv-trainee-service/**
+zuul.routes.cv-trainee-service.sensitive-headers=Set-Cookie,Authorization
+hystrix.command.cv-trainee-service.execution.isolation.thread.timeoutInMilliseconds=600000
+
+zuul.routes.cv-trainer-service.path=/cv-trainer-service/**
+zuul.routes.cv-trainer-service.sensitive-headers=Set-Cookie,Authorization
+hystrix.command.cv-trainer-service.execution.isolation.thread.timeoutInMilliseconds=600000
